examples/test/testpolicy6719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6719
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key36: value11
      key49: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value20
          key4: value14
      podSelector:
        matchLabels:
          key8: value48
